k8s/base/networkpolicy/allow-ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-ingress-backend
  namespace: product-catalog

spec:

  podSelector:
    matchLabels:
      app: backend

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx

    ports:
    - protocol: TCP
      port: 5000
