k8s/base/networkpolicy/default-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny-egress
  namespace: product-catalog

spec:
  podSelector: {}

  policyTypes:
    - Egress
