k8s/base/networkpolicy/default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny-ingress
  namespace: product-catalog

spec:
  podSelector: {}

  policyTypes:
    - Ingress
